syntax = "proto3";

package distributed;

// The greeting service definition.
service Parallelizer {
  // Sends a greeting
  rpc Dot (DotRequest) returns (stream DotReply) {}
}

// The request message containing the user's name.
message DotRequest {
  repeated int32 indptr = 1;
  repeated int32 indices = 2;
  repeated double data = 3;
  repeated double vec = 4;
}

// The response message containing the greetings
message DotReply {
  int32 local_row = 1;
  double result = 2;
}
